syntax = "proto3";

option csharp_namespace = "AElf.Network.Data";

import "google/protobuf/timestamp.proto";

message Handshake {
    
    NodeData NodeInfo = 1;
    bytes PublicKey = 2;
    int32 Height = 3;
    // sig NodeData
    bytes R = 9;
    bytes S = 10;
}

message NodeData {
    string IpAddress = 1;
    int32 Port = 2;
}

message PeerListData {
    repeated NodeData nodeData = 1;
}

message ReqPeerListData {
    int32 numPeers = 1;
}

message BlockRequest {
    int32 Height = 1;
    bytes Id = 2;
}

message BlockHeaderRequest {
    int32 height = 1;
    int32 count = 2;
}

message Announce {
    int32 Height = 1;
    bytes Id = 2;
}

message TxRequest {
    repeated bytes TxHashes = 1;
}

message HeightData {
    int32 Height = 1;
}

message Ping {
    string Id = 1;
    google.protobuf.Timestamp Time = 2;
}

message Pong {
    string Id = 1;
    google.protobuf.Timestamp Time = 2;
}

